# SPEF

./: .git-blame-ignore-revs  .gitignore  Dockerfile  MANIFEST.in  README.md  example.py  install.sh  key_values.py  libtmux_use.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
cpp/: Makefile  hangman.h  ncurses  ncurses.cpp
data/: Dockerfile  proj_conf.yaml  testsuite.sh
data/students/: xkgrej01.tar.xz
example/: Dockerfile  proj_conf.yaml
example/tests/: sum  testsuite.sh  testsuite_tags.yaml
python/: browsing.py  directory.py  menu.py
python/brows_and_edit/: buffer.py  config.py  cursor.py  directory.py  editor.py  main.py  window.py
python/editor/: buffer.py  cursor.py  editor.py  window.py
python/framework/: buffer.py  config.py  log  main.py  window.py
python/project/: example.txt
spef/: README.md  README2.md  __main__.py  main.py  prepare_tests.sh  run_tests.sh
spef/controls/: control.py  functions.py
spef/data/: report_template.j2
spef/example/: xsakte08.tar.xz
spef/modules/: bash.py  buffer.py  directory.py  environment.py  filter.py  project.py  report.py  tags.py  window.py
spef/src/: main.py  ncurses.py
spef/styles/: ncurses.py
spef/testing/: report.py  tst.py
spef/tests/: run.py
spef/utils/: coloring.py  file.py  highlighter.py  history.py  loading.py  logger.py  (+5 more)
src/: buffer.py  config.py  config.yaml  control.py  control.yaml  curses.py  directory.py  main.py  ncurses.py  screens.py  tags.py  typical_notes.txt  user_help.py  window.py
testing/: run_tests.py
tests/: key_values.py  run.py  scenarios_test.py
(+299 files in other folders)
