[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spef"
description = "Student Project Evaluation Framework"
version = "0.0.1"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Natália Dižová", email = "ndizova2@gmail.com" },
]
maintainers = [
    { name = "Viktor Malík", email = "imalik@fit.vut.cz" },
    { name = "Jiří Pavela", email = "ipavela@fit.vut.cz" },
]
readme = "README.md"
dependencies = [
    "jinja2",
    "Pygments",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "black"
]
test = [
    "pytest"
]

[project.scripts]
spef = "spef.main:run"

[project.entry-points."pygments.styles"]
ncurses = "spef.styles.ncurses:NcursesStyle"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
